--- a/web-developer-test/src/App.css
+++ b/web-developer-test/src/App.css
@@ -13,3 +13,17 @@
     font-size: 20px;
     padding-left: 10px;
 }
+
+.displayArea{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.displayArea h3, h4{
+    margin: 10px,
+}
+
+.displayArea img{
+    width: 250px;
+}
